[gd_scene load_steps=3 format=3 uid="uid://c2pobdnmqst6a"]

[ext_resource type="Script" path="res://It'sCalculatingTime.gd" id="1_37yq2"]

[sub_resource type="LabelSettings" id="LabelSettings_ydnun"]
font_size = 50

[node name="Calculate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37yq2")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 32.0
offset_right = 672.0
offset_bottom = 96.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 352.0
offset_right = 672.0
offset_bottom = 416.0

[node name="oper" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 160.0
offset_right = 672.0
offset_bottom = 224.0
label_settings = SubResource("LabelSettings_ydnun")

[node name="resuer" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 480.0
offset_right = 672.0
offset_bottom = 544.0
label_settings = SubResource("LabelSettings_ydnun")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_top = 480.0
offset_right = 320.0
offset_bottom = 544.0
text = "Result:"
label_settings = SubResource("LabelSettings_ydnun")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_top = 352.0
offset_right = 320.0
offset_bottom = 416.0
text = "Number two:"
label_settings = SubResource("LabelSettings_ydnun")

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_top = 160.0
offset_right = 320.0
offset_bottom = 224.0
text = "Operation:"
label_settings = SubResource("LabelSettings_ydnun")

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 96.0
text = "Number one:"
label_settings = SubResource("LabelSettings_ydnun")

[node name="Plus" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 64.0
offset_right = 832.0
offset_bottom = 128.0
text = "+"

[node name="Minus" type="Button" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 64.0
offset_right = 960.0
offset_bottom = 128.0
text = "-"

[node name="Markiplier" type="Button" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 128.0
text = "*"

[node name="Power" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 256.0
text = "**"

[node name="Divide" type="Button" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 192.0
offset_right = 960.0
offset_bottom = 256.0
text = "/"

[node name="Mod" type="Button" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 192.0
offset_right = 1088.0
offset_bottom = 256.0
text = "MOD"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 320.0
offset_right = 1088.0
offset_bottom = 448.0
text = "Clear"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 480.0
offset_right = 1088.0
offset_bottom = 608.0
text = "Close"

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 392.0
offset_right = 672.0
offset_bottom = 464.0
text = "_______________"
label_settings = SubResource("LabelSettings_ydnun")

[connection signal="pressed" from="Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="Markiplier" to="." method="_on_markiplier_pressed"]
[connection signal="pressed" from="Power" to="." method="_on_power_pressed"]
[connection signal="pressed" from="Divide" to="." method="_on_divide_pressed"]
[connection signal="pressed" from="Mod" to="." method="_on_mod_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
